[package]
name = "mlx9061x"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mlx9061x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MLX90614 and MLX90615 non-contact infrared thermometers."
readme = "README.md"
keywords = ["infrared", "thermometer", "temperature", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mlx9061x-rs"
documentation = "https://docs.rs/mlx9061x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = "0.2.5"
smbus-pec = "1"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
