[package]
name = "mlx9061x"
version = "0.2.1"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mlx9061x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MLX90614 and MLX90615 non-contact infrared thermometers."
readme = "README.md"
keywords = [
    "infrared",
    "thermometer",
    "temperature",
    "sensor",
    "embedded-hal-driver",
]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mlx9061x-rs"
documentation = "https://docs.rs/mlx9061x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[features]
defmt-03 = ["dep:defmt", "embedded-hal/defmt-03"]

[dependencies]
embedded-hal = "1.0.0"
smbus-pec = "1"
defmt = { version = "0.3.6", optional = true }

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"] }

[profile.release]
lto = true
